make-a-wish-salesforce/src/objects/Loop__Form_Step__c.object
<CustomObject>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DocGen Package</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>Form Steps</relationshipLabel>
        <relationshipName>Form_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Input_Column_Width__c</fullName>
        <inlineHelpText>Enter the desired width in pixels or percent for the field input column of the form, e.g. 100px or 30%.</inlineHelpText>
        <label>Input Column Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Label_Column_Width__c</fullName>
        <inlineHelpText>Enter the desired width in pixels or percent for the field label column of the form, e.g. 100px or 30%.</inlineHelpText>
        <label>Label Column Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>